kile (1:1.9.1-2) unstable; urgency=low

  * Update debian/watch

 -- Mark Purcell <msp@debian.org>  Fri, 28 Jul 2006 21:16:25 +0100

kile (1:1.9.1-1) unstable; urgency=low

  [Fathi Boudra]
  * New maintainers with Ben's agreement
    * Maintainer: KDE Extras Team
    * Uploaders: Ana Beatriz Guerrero Lopez, Mark Purcell and Fathi Boudra
  * New upstream release (Closes: #337550, #358250, #358857, #276348, #221898,
    #285035)
  * Converted package to cdbs
  * compat: bumped to 5
  * control:
    * removed unneeded Build-depends: libqt3-compat-headers and g++-3.4
      (Closes: #342995)
    * bumped Standards-Version to 3.7.2
    * added texlive-base-bin in Depends (Closes: #372191)
    * added Homepage in long description
  * copyright:
    * added missing copyright for kile grep dialog, plain to latex converter,
      quick document dialog, stats dialog, and create package script
  * docs: merged kile.docs and kile-i18n.docs
  * kile-i18n.install: added es documentation
  * kile.manpages: removed, replaced by an entry in rules
  * kile.menu: renamed to menu
  * README.Debian: merged kile.README.Debian and kile-i18n.README.Debian
  * Added watch file

  [Ana Beatriz Guerrero Lopez]
  * re-libtoolizing at build time, so now the package doesn't depend from
    libfreetype6 and other spurious libraries.
  * removed kile.doc-base
  * fixed perms of runTests.sh
  * cosmetic changes in long description

 -- Fathi Boudra <fboudra@free.fr>  Sun, 25 Jun 2006 10:58:50 +0200

kile (1:1.8.1-3.2) unstable; urgency=low

  * Non-maintainer upload with maintainer's consent.
  * No source-changes upload to make kile-i18n installable again after its
    binNMU. (Closes: #342229)

 -- Adeodato Simó <dato@net.com.org.es>  Fri, 09 Dec 2005 13:44:02 +0100

kile (1:1.8.1-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * work around gcc-4.0 FTBFS on some architectures

 -- LaMont Jones <lamont@debian.org>  Fri, 14 Oct 2005 19:28:34 +0000

kile (1:1.8.1-3) unstable; urgency=low
