@@ -2,19 +2,11 @@
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/kde.mk
+include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
 DEB_DH_INSTALL_ARGS = --sourcedir=debian/tmp
 DEB_INSTALL_MANPAGES_kile := debian/kile.1
 
-makebuilddir/kile::
-	-test -r /usr/share/misc/config.sub && \
-	cp -f /usr/share/misc/config.sub admin/config.sub
-	-test -r /usr/share/misc/config.guess && \
-	cp -f /usr/share/misc/config.guess admin/config.guess
-
-	/usr/bin/libtoolize -f
-	cp -f /usr/share/aclocal/libtool.m4 admin/libtool.m4.in
-	$(MAKE) -f admin/Makefile.common
 
 install/kile::
 	# Install pixmap
@@ -22,6 +14,4 @@ install/kile::
 
 	chmod +x  debian/tmp/usr/share/apps/kile/test/runTests.sh
 
-clean::
-	rm -f admin/config.sub admin/config.guess debian/debiandirs admin/ltmain.sh configure admin/libtool.m4.in aclocal.m4 acinclude.m4
 
